# b-anomaly-reproduction

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
archive/: README.md
archive/reports/: wo005_reflective_kernel.md  wo006_leave_one_observable_out.csv  wo006_leave_one_observable_out.json  wo006_multi_observable.csv  wo006_multi_observable.json  wo007_eigenmodes.csv  wo007_eigenmodes.json  wo007_eigenvalue_derivation.md  wo008_discrete_lift.csv  wo008_discrete_lift.json  wo008_discrete_lift.md  wo011_spectral.csv  wo011_spectral.json  wo011_spectral.md  wo011_spectrum.csv  wo013_alternatives.csv  wo013_bootstrap_bins.csv  wo013_form_factor_variation.csv  wo013_regions.csv  wo013_stress_test.md  wo014_cross_dataset.csv  wo014_cross_dataset.md  wo015_bootstrap.csv  wo015_cross_channel.csv  wo015_cross_channel.md  wo015_regions.csv  wo015b_basis_diagnostic.md
archive/scripts/: wo006_multi_observable.py  wo007_eigenmodes.py  (+3 more)
paper/: README.md  main.tex  references.bib
reports/: wo009_full_lift.csv  wo009_full_lift.json  wo009_full_lift.md  wo016a_akaike_stack.csv  wo016a_akaike_stack.md  wo016b_variant_geometry.csv  wo016b_variant_geometry.md  wo016c_nonlinear_refit.csv  wo016c_nonlinear_refit.md  wo016d_nonlinear_xdataset.csv  wo016d_nonlinear_xdataset.md
repro/: run_all.sh
scripts/: wo016a_akaike_stack.py  wo016b_variant_geometry.py  wo016c_nonlinear_refit.py  wo016d_nonlinear_xdataset.py  wo017_paper_figures.py
tests/: conftest.py  test_data_ingest.py  test_hepdata_ingest.py  test_likelihood.py  test_vfd_closure.py
(+178 files in other folders)
