[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfd-b-anomaly"
version = "0.2.0"
description = "Reproduction package for a geometry-derived response kernel test on the LHCb b -> s mu mu anomaly."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "VFD project" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "pyyaml>=5.4",
    "flavio>=2.4",
    "wilson>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
plotting = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error::FutureWarning"]
